# har-analyzer

./: .env.example  .gitignore  BUGS_AND_QUICK_FIXES.md  CODEBASE_REVIEW.md  HAR_Scanner_Overview.md  IMPLEMENTATION_PLAN.md  README.md  UI_SPEC_FOR_UXPILOT.md  har_scanner.py  pyproject.toml  requirements.txt
har_analyzer/: __init__.py
src/har_analyzer/: __init__.py  cli.py  config.py  context.py  evaluation.py  executor.py  graph.py  har.py  hypotheses.py  models.py  persistence.py  redaction.py  reporting.py  web.py
src/har_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/har_analyzer/templates/: index.html  request_detail.html  run_detail.html
tests/: test_cli.py  test_config.py  test_context.py  test_evaluation.py  test_graph.py  test_har.py  test_hypotheses.py  test_persistence.py  test_redaction.py  test_web.py
tests/fixtures/: sanitized_sample.har
